--- a/src/app/public/works/works.component.html
+++ b/src/app/public/works/works.component.html
@@ -1,8 +1,10 @@
 <div class="cardAnimations pt-3">
-    <h2 class="text-start px-4 mt-4 col-lg-12 m-0 modul-headers">
-        Projects
-    </h2>
-    <div class="modul-header-border"> </div>
+    <div class=" ps-4">
+        <h2 class="text-start mt-3 col-lg-12 m-0 modul-headers">
+            Projects
+        </h2>
+        <div class="modul-header-border"> </div>
+    </div>
 
     <div class="row px-2" style="margin: 0;">
 
