--- a/src/app/public/about/about.component.scss
+++ b/src/app/public/about/about.component.scss
@@ -24,3 +24,25 @@ p{
     color: #444444;
     font-weight: 500;
 }
+
+.overlay {
+    background: #fff;
+    margin-top: 10px;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.13);
+    border-radius: 0.25rem;
+  }
+  
+  .overlay-fall {
+    animation: fall 300ms ease-in-out forwards;
+    transform-origin: top center;
+  }
+ 
+
+  @keyframes fall {
+    0% {
+      transform: scaleY(0);
+    }
+    100% {
+      transform: skewY(1);
+    }
+  }
