--- a/src/app/public/contract/contract.component.html
+++ b/src/app/public/contract/contract.component.html
@@ -1,10 +1,12 @@
 <div class="cardAnimations ">
 
     <div class="row py-4" style="margin: 0;">
-        <h2 class="text-start px-4 mt-3 col-lg-12 m-0 modul-headers m-0">
-            Contact
-        </h2>
-        <div class="modul-header-border"> </div>
+        <div class=" ps-4">
+            <h2 class="text-start mt-3 col-lg-12 m-0 modul-headers">
+                Contact
+            </h2>
+            <div class="modul-header-border"> </div>
+        </div>
 
         <form class="p-0 mt-2" [formGroup]="formGroup">
             <div class="row p-0" style="margin: 0;">
