--- a/src/app/public/skills/skills.component.html
+++ b/src/app/public/skills/skills.component.html
@@ -1,9 +1,11 @@
 <div class="cardAnimations ">
   <div class="row py-4" style="margin: 0;">
-    <h2 class="text-start px-4 mt-3 col-lg-12 m-0 modul-headers">
-      Skills
-    </h2>
-    <div class="modul-header-border"> </div>
+    <div class=" ps-4">
+      <h2 class="text-start mt-3 col-lg-12 m-0 modul-headers">
+        Skills
+      </h2>
+      <div class="modul-header-border"> </div>
+    </div>
 
     <!-- <div class="row mt-2 about-con" *ngFor="let item of skills">
             <h4 style="font-weight: 500; margin: 0;"> <img [src]="item.url" width="17" alt=""> {{item.name}} ( <span
@@ -51,7 +53,7 @@
             {{card.percent}}
           </div>
         </div>
-      </div> -->
+      </div> 
 
 
       <div class="col-lg-3 mt-3 cardModules" *ngFor="let card of skills; let i=index">
@@ -66,7 +68,7 @@
                 </svg>
               </div>
               <div class="cardContentFront" >
-                <img  [src]="card.url"  style="max-width: 90px; max-height: 85px;" alt=""
+                <img  [src]="card.url"  style="max-width: 90px; max-height: 85px; min-height: 75px;" alt=""
                   class="card-img">
                 <h3 class="mt-1 text-center">{{card.name}}</h3>
               </div>
@@ -85,6 +87,49 @@
               <div class="cardContentBack" >
                 <p [style.color]="card.color">{{card.percent}}</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    -->
+
+      <div class="col-lg-4 mt-3" *ngFor="let card of skills; let i=index">
+        <div class="flip" [ngClass]="{'flip-flop': card.state }">
+          <div class="front">
+            <div class="card education" [style.--bg-color]="card.color">
+              <div class="card-pattern" (click)="cardClicked(i)" [style.background-color]="card.color">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-lg"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="m9.708 6.075-3.024.379-.108.502.595.108c.387.093.464.232.38.619l-.975 4.577c-.255 1.183.14 1.74 1.067 1.74.72 0 1.554-.332 1.933-.789l.116-.549c-.263.232-.65.325-.905.325-.363 0-.494-.255-.402-.704l1.323-6.208Zm.091-2.755a1.32 1.32 0 1 1-2.64 0 1.32 1.32 0 0 1 2.64 0Z" />
+                </svg>
+              </div>
+              <div class="overlay"></div>
+              <div class="circle d-flex flex-column" [routerLink]="[card.url]" [style.background-color]="card.color">
+                <img [src]="card.url" alt="">
+                <p style="font-size: 90%; width: 100px;" class="mb-0 mt-2">{{card.name}}</p>
+              </div>
+              <p class="card-title">{{card.value}}</p>
+            </div>
+          </div>
+          <div class="back">
+            <div class="card education" [style.--bg-color]="card.color">
+              <div class="card-pattern" (click)="cardClicked(i)" [style.background-color]="card.color">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-lg"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="m9.708 6.075-3.024.379-.108.502.595.108c.387.093.464.232.38.619l-.975 4.577c-.255 1.183.14 1.74 1.067 1.74.72 0 1.554-.332 1.933-.789l.116-.549c-.263.232-.65.325-.905.325-.363 0-.494-.255-.402-.704l1.323-6.208Zm.091-2.755a1.32 1.32 0 1 1-2.64 0 1.32 1.32 0 0 1 2.64 0Z" />
+                </svg>
+              </div>
+              <p class="contentCard pt-5" [style.color]="card.color">
+                {{card.name}}
+                <span class="progress-container mt-2">
+                  <span class="progress-stick" [style.background-color]="card.color" [style.width]="card.percent"
+                    [title]="card.percent">
+                  </span>
+                </span>
+              </p>
             </div>
           </div>
         </div>
