--- a/src/app/public/works/cards/cards.component.html
+++ b/src/app/public/works/cards/cards.component.html
@@ -32,7 +32,23 @@
         </ul>
     </div>
 
-    <div class="row mt-3" style="margin: 0;">
+    <div class="row mt-4" style="margin: 0;">
+        <h2 class="m-0">Simple cards.</h2>
+        <div class="modul-header-border"> </div>
+
+        <div class="row px-2" style="margin: 0;">
+            <div class="col-lg-3 mt-3" *ngFor="let card of projects" [routerLink]="[card.link]">
+                <div class="pb-3 px-2 row justify-content-center mat-elevation-z8 cards" style="margin: 0;"
+                    [style.Color]="card.color">
+                    <div class="card-pattern" [style.background-color]="card.color"></div>
+                    <img [src]="card.url" style="width: 100px; height: 80px;" alt="" class="mt-4 card-img">
+                    <h3 class="mt-2 text-center">{{card.title}}</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-5" style="margin: 0;">
         <h2 class="m-0">Flip-flop cards.</h2>
         <div class="modul-header-border"> </div>
 
@@ -76,53 +92,65 @@
 
     </div>
 
-    <div class="row mt-3" style="margin: 0;">
-        <h2 class="m-0">Simple cards.</h2>
-        <div class="modul-header-border"> </div>
 
-        <div class="row px-2" style="margin: 0;">
-            <div class="col-lg-3 mt-3" *ngFor="let card of projects" [routerLink]="[card.link]">
-                <div class="pb-3 px-2 row justify-content-center mat-elevation-z8 cards" style="margin: 0;"
-                    [style.Color]="card.color">
-                    <div class="card-pattern" [style.background-color]="card.color"></div>
-                    <img [src]="card.url" style="width: 100px; height: 80px;" alt="" class="mt-4 card-img">
-                    <h3 class="mt-2 text-center">{{card.title}}</h3>
+    <div class="row mt-5" style="margin: 0;">
+        <div class="col-lg-6 row" style="margin: 0;">
+            <h2 class="m-0">Stacked effect card</h2>
+            <div class="modul-header-border"> </div>
+
+            <div class="mat-elevation-z8 col-lg-6 mt-4 p-0" style=" position: relative;">
+                <div class="stacked-card">
+                    <div class="img-con">
+                        <img src="../../../../assets/projects/gradient.jpg" alt="">
+                    </div>
+
+                    <div class="content-con row" style="margin: 0;">
+                        <div class="col-sm-6 ">
+                            <p class="m-0 fs-5 fw-bolder">Card title</p>
+                            <p class="m-0" style=" font-size: 14px;">Subtitle</p>
+                        </div>
+                        <div class="col-sm-6 d-flex align-items-center justify-content-end">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row mt-3" style="margin: 0;">
-            <h2 class="m-0">User card.</h2>
+        <div class="col-lg-6 row" style="margin: 0;">
+            <h2 class="m-0" style="height: 0px;">User card</h2>
             <div class="modul-header-border"> </div>
-
-            <div class="col-lg-4 px-4 mt-2 user-card">
-                <div class="bg-white mat-elevation-z8 py-3  row align-items-center">
+    
+            <div class="col-lg-8 user-card">
+                <div class="bg-white mat-elevation-z8 py-3  row ">
                     <div class="text-center mb-2">
                         <div style="position: relative; display: flex; justify-content: center;">
                             <div class="hoverable">
                                 <img [src]="url ? url : '../../../../assets/avatar.png'" style="object-fit: cover;">
                                 <!-- <img src="../../../../assets/avatar.png" alt=""> -->
                                 <div class="hover-text">
-                                    <svg (click)="lookPhoto()" *ngIf="isCamera"
-                                        style="color: #136481; margin-right: 15px;" xmlns="http://www.w3.org/2000/svg"
-                                        width="22" height="22" fill="currentColor" class="bi bi-camera-fill"
-                                        viewBox="0 0 16 16">
+                                    <svg (click)="lookPhoto()" *ngIf="isCamera" style="color: #136481; margin-right: 15px;"
+                                        xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-camera-fill" viewBox="0 0 16 16">
                                         <path d="M10.5 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
                                         <path
                                             d="M2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2zm.5 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9 2.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0z" />
                                     </svg>
-
-                                    <svg (click)="changePhoto()" style="color: #136481;"
-                                        xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+    
+                                    <svg (click)="changePhoto()" style="color: #136481;" xmlns="http://www.w3.org/2000/svg"
+                                        width="18" height="18" fill="currentColor" class="bi bi-pencil-square"
+                                        viewBox="0 0 16 16">
                                         <path
                                             d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                                         <path fill-rule="evenodd"
                                             d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                                     </svg>
-
-
+    
+    
                                 </div>
                                 <div class="background"></div>
                             </div>
@@ -135,22 +163,24 @@
                             <path
                                 d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
                         </svg>
-
+    
                         <svg *ngIf="isUrl" (click)="savePhoto()"
-                            style="margin-right: 15px; cursor: pointer; color: #8fc93a;"
-                            xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                            class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                            style="margin-right: 15px; cursor: pointer; color: #8fc93a;" xmlns="http://www.w3.org/2000/svg"
+                            width="18" height="18" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                             <path
                                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                         </svg>
                     </div>
-
+    
                     <div class="text-center mt-2 px-3" style=" font-size: 16px;">
                         Junior Front-end developer
                     </div>
                 </div>
             </div>
+        </div>
+
     </div>
+
 
 
 </div>
