--- a/src/app/public/works/tables/tables.component.html
+++ b/src/app/public/works/tables/tables.component.html
@@ -638,4 +638,47 @@
         </div>
     </div>
 
+    <div class=" mt-4 py-2 mat-elevation-z8">
+        <h2>Excel export table with showing table headers.</h2>
+
+        <div class="line-container">
+            <div class="col-12 d-flex justify-content-end">
+                <button (click)="handleExportExcelWithHeader()" class="addBtn" style="background-color: #009846;">
+                    Excel
+                </button>
+            </div>
+
+            <div class="mat-elevation-z8 line-container mt-2 mx-auto">
+                <table id="excelHeaderTable" mat-table [dataSource]="firstDataSource">
+                    <ng-container *ngFor="let column of displayedFirstColumns; let i = index" [matColumnDef]="column">
+                        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+                        <td mat-cell *matCellDef="let element; let rowIndex = index" class="hower-td">
+                            {{element[column.replace(' ', '')]}}</td>
+                        <td mat-footer-cell *matFooterCellDef>
+                            <div *ngIf="i==5">
+                                {{22}}
+                            </div>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedFirstColumns; sticky: true"></tr>
+                    <tr *matNoDataRow>
+                        <th colspan="9" style="text-align: center;">
+                            <span>No rows found</span>
+                        </th>
+                    </tr>
+                    <tr mat-footer-row *matFooterRowDef="displayedFirstColumns; sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedFirstColumns;" class="route"
+                        (click)="highlight($event)">
+                    </tr>
+                </table>
+
+            </div>
+
+            <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons #firstPag
+                aria-label="Select page of periodic elements">
+            </mat-paginator>
+        </div>
+    </div>
+
 </div>
