--- a/src/app/public/works/layouts/creative-boutigue/creative-boutigue.component.scss
+++ b/src/app/public/works/layouts/creative-boutigue/creative-boutigue.component.scss
@@ -4,7 +4,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     padding: 20px 45px;
-    font-family: 'Lobster Two', cursive !important;
+    font-family: 'Lobster Two', cursive;
     color: #F1F3F1;
  }
 
