--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,25 +1,26 @@
 <div class="common-container row col-lg-12" style="margin: 0 auto;">
-  <div class=" container-item-links col-md-1 text-center">
-    <ul class="row ps-0 py-3 list-container mt-5 justify-content-center">
-      <li class="list-items" routerLinkActive="router-link-active" [routerLink]="'about'">
-        <p>
-          <i class="fa-regular fa-user me-1"></i>
+  <div class=" container-item-links ps-0 col-md-1 text-center">
+    <ul class="row ps-0 py-3 list-container mt-5 justify-content-start">
+      <li class="list-items px-1" routerLinkActive="router-link-active" [routerLink]="'about'">
+        <p class="text-start ps-1">
+          <i class="fa-regular fa-address-card me-1"></i>
           About
         </p>
       </li>
-      <li class="list-items" routerLinkActive="router-link-active" [routerLink]="'skills'">
-        <p><i class="fa-light fa-kitchen-set me-1"></i>
+      <li class="list-items px-1" routerLinkActive="router-link-active" [routerLink]="'skills'">
+        <p class="text-start ps-1">
+          <i class="fa-regular fa-wand-magic-sparkles me-1"></i>
           Skills
         </p>
       </li>
-      <li class="list-items" routerLinkActive="router-link-active" [routerLink]="'works'">
-        <p>
+      <li class="list-items px-1" routerLinkActive="router-link-active" [routerLink]="'works'">
+        <p class="text-start ps-1">
           <i class="fa-regular fa-diagram-project me-1"></i>
           Projects
         </p>
       </li>
-      <li class="list-items" routerLinkActive="router-link-active" [routerLink]="'contact'">
-        <p>
+      <li class="list-items px-1" routerLinkActive="router-link-active" [routerLink]="'contact'">
+        <p class="text-start ps-1">
           <i class="fa-regular fa-address-book me-1"></i>
           Contact
         </p>
