--- a/src/app/public/works/layouts/golden-offer/golden-offer.component.scss
+++ b/src/app/public/works/layouts/golden-offer/golden-offer.component.scss
@@ -5,7 +5,7 @@
     overflow-x: hidden;
     padding: 20px 45px 0;
     color: #F1F3F1;
-    font-family: 'EB Garamond', serif !important;
+    font-family: 'EB Garamond', serif ;
     position: relative;
  }
 
