--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
+        <div class="row ps-4 m-0 pt-2 pb-3 text-start">
             <div class="col-md-12">
                 <div>
                     <h3 class="mb-1 text-lg font-medium about-headers">Skills</h3>
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b text-start pt-2 pb-3">
+        <!-- <div class="row ps-4 m-0 text-start pt-2 pb-3">
             <div class="col-md-12">
                 <h3 class="mb-1 text-lg font-medium about-headers">Experience</h3>
                 <div class="text-sm font-normal ">
@@ -98,6 +98,6 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
