--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -28,7 +28,7 @@
     cursor: pointer;
     padding: 10px ;
     color: #b9b9b9;
-    max-width: 90px;
+    // max-width: 90px;
     font-weight: 600;
 }
 
