--- a/src/app/public/experience/experience.component.html
+++ b/src/app/public/experience/experience.component.html
@@ -11,19 +11,17 @@
             <div class="col-md-2 border-r">
                 <img class="col-sm-11 mx-auto" [src]="item.imgUrl" alt="">
             </div>
-            <div class="col-md-9">
-                <div class="text-sm font-normal ps-2 ">
-                    <div class="mb-1">
-                        <span class="font-medium">
-                            • {{item.name}}, 
-                        </span>
-                        <small style="color: #f39d35;"> {{item.period}}</small>
-                    </div>
-
-                    <p class="mt-2" *ngFor="let subItem of item.works">
-                        {{subItem.desc}}
-                    </p>
+            <div class="col-md-10 text-sm font-normal ps-2">
+                <div class="mb-1">
+                    <span class="font-medium">
+                        • {{item.name}},
+                    </span>
+                    <small style="color: #f39d35;"> {{item.period}}</small>
                 </div>
+
+                <p class="mt-2" *ngFor="let subItem of item.works">
+                    {{subItem.desc}}
+                </p>
             </div>
         </div>
     </div>
