--- a/src/app/public/skills/skills.component.html
+++ b/src/app/public/skills/skills.component.html
@@ -7,24 +7,25 @@
       <div class="modul-header-border"> </div>
     </div>
 
-    <div class="row mt-3" style="margin: 0;">
-      <div *ngFor="let itemSkill of skills; let i = index" class="row border-gray-400 border-dotted border-b pb-3" [ngClass]="{'mt-4': i != 0}" style="margin: 0;">
-        <div class="row pe-0 text-start">
-          <div class="col-md-2 d-flex align-items-center justify-content-center mt-3">
-            <p class="text-start text-gray-500 font-semibold">
-              {{itemSkill.name}}
+    <div *ngFor="let itemSkill of skills; let i = index" class="mt-3 p-0 text-start w-full pb-3"
+      [ngClass]="{'mt-4': i != 0}" style="margin: 0;">
+
+      <div class="row mx-3 justify-content-between">
+        <div class="col-md-2 d-flex align-items-center justify-content-start mt-3">
+          <p class="text-start text-gray-500 font-semibold">
+            {{itemSkill.name}}
+          </p>
+        </div>
+
+        <div class="col-md-10 row p-0 justify-content-end">
+          <div *ngFor="let item of itemSkill.fields" class="w-fit mt-3">
+            <img style="height: 70px; width: 70px;" class="mx-auto" [src]="item.url" alt="">
+            <p class="text-center font-medium mt-2">
+              {{item.name}}
             </p>
           </div>
-  
-          <div class="col-md-10 row p-0 justify-content-end">
-            <div *ngFor="let item of itemSkill.fields" class="w-fit ps-3 mt-3">
-              <img width="70" style="height: 70px;" class="mx-auto" [src]="item.url" alt="">
-              <p class="text-center font-medium mt-2">
-                {{item.name}}
-              </p>
-            </div>
-          </div>
         </div>
+
       </div>
     </div>
   </div>
