--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,8 +23,8 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #b1b1b1 !important;
-  border-radius: 3px;
+  background-color: #7a7a7a !important;
+  border-radius: 1px;
 }
 
 .cdk-global-scrollblock {
@@ -210,7 +210,7 @@
 }
 
 .cardAnimations::-webkit-scrollbar-thumb {
-  background-color: #b1b1b1 !important;
+  background-color: #9c9c9c !important;
   border-radius: 3px;
 }
 
