--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,28 +1,24 @@
 <div class="cardAnimations ">
-    <div class="row py-1" style="margin: 0;">
-        <div class="ps-4 m-0 row border-gray-400 border-dotted border-b pt-2 pb-3">
-            <h2 class="mt-2 col-lg-12 m-0 text-center modul-headers">
+    <div class="row py-4" style="margin: 0;">
+        <div class="ps-4">
+            <h2 class="text-start mt-2 col-lg-12 m-0 modul-headers">
                 Gulchohra Umarli
             </h2>
-            <div class="text-center mt-2 col-lg-12 m-0">
-                <span class="text-sm px-2 border-orange-400 border-r about-header-info"> Baku, Azerbaijan</span>
-                <span class="text-sm px-2 border-orange-400 border-r about-header-info"> (+994) 70 258 44 74</span>
-                <span class="text-sm px-2 about-header-info"> gulchohra.umarli@gmail.com</span>
+            <div class="text-start col-lg-12 m-0">
+                <span class="text-sm pe-2 border-orange-400 border-r about-header-info"> Baku, Azerbaijan</span>
+                <span class="text-sm pe-2 border-orange-400 border-r about-header-info"> (+994) 70 258 44 74</span>
+                <span class="text-sm pe-2 about-header-info"> gulchohra.umarli@gmail.com</span>
             </div>
-            <!-- <div class="modul-header-border mt-1"> </div> -->
+            <div class="modul-header-border mt-1"> </div>
         </div>
 
-        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
-            <div class="col-md-12">
-                <div>
-                    <h3 class="mb-1 text-lg font-medium about-headers">Summary</h3>
-                    <p class="text-sm font-normal">
-                        I am a qualified front-end web developer with more than one years of experience in website
-                        design and development. I am always open to learning and have the ability to work in a team or
-                        individually.
-                    </p>
-                </div>
-            </div>
+        <div class="row ps-3 m-0 border-gray-400 border-dotted border-b pt-3 pb-3 text-start">
+            <h3 class="mb-1 text-lg font-medium about-headers">Summary</h3>
+            <p class="text-sm font-normal">
+                I am a qualified front-end web developer with more than one years of experience in website
+                design and development. I am always open to learning and have the ability to work in a team or
+                individually.
+            </p>
         </div>
 
         <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
@@ -45,10 +41,10 @@
                         <span class="font-medium">Azerbaijan</span>,
                         <small>Native</small>
 
-                        <span class="ms-3 font-medium">English</span>, 
+                        <span class="ms-3 font-medium">English</span>,
                         <small>Intermediate(B1)</small>
 
-                        <span class="ms-3 font-medium">Turkish</span>, 
+                        <span class="ms-3 font-medium">Turkish</span>,
                         <small>Advanced(C1)</small>
                     </p>
                 </div>
@@ -69,35 +65,5 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="row ps-4 m-0 text-start pt-2 pb-3">
-            <div class="col-md-12">
-                <h3 class="mb-1 text-lg font-medium about-headers">Experience</h3>
-                <div class="text-sm font-normal ">
-                    <div class="mb-1">
-                        <span class="font-medium">Intern Front-End Web Developer | Algorithmics Azerbaijan</span>,
-                        <small>Feb 2022 - Jun 2022</small>
-                    </div>
-                    <p>
-                        • I learned basics of web developement, how we can work with front-end languages, tools,
-                        libraries
-                        to make more efficient, reliable, safe etc products and so on.
-                        • Developed user interface components and implemented them following well-known React.js
-                        workflows.
-                    </p>
-                </div>
-                <div class="text-sm font-normal mt-2">
-                    <div class="mb-1">
-                        <span class="font-medium">Front-End Web Developer | "Uniser Group" MMC</span>,
-                        <small>Jun 2022 - Current</small>
-                    </div>
-                    <p>
-                        • I developed the front-end of new software for many logistics, travel, etc. companies and
-                        supported previous projects working within the team. During this term, I used HTML5, CSS3
-                        (Bootstrap, Tailwind), JavaScript (Angular) and so many npm libraries. And I continue to do so.
-                    </p>
-                </div>
-            </div>
-        </div> -->
     </div>
 </div>
