--- a/src/app/public/experience/experience.component.html
+++ b/src/app/public/experience/experience.component.html
@@ -9,7 +9,7 @@
     <div class="row px-2" style="margin: 0;">
         <div class="row mt-4 text-start pb-3" *ngFor="let item of experienceList">
             <div class="col-md-2 border-r">
-                <img class="col-sm-11 mx-auto" [src]="item.imgUrl" alt="">
+                <img class="col-sm-11 mx-auto" style="max-width: 110px;" [src]="item.imgUrl" alt="">
             </div>
             <div class="col-md-10 text-sm font-normal ps-2">
                 <div class="mb-1">
