--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="common-container row col-lg-12" style="margin: 0 auto;">
-  <div class=" container-item-links col-md-2 text-center" style="max-width: 14%;">
+  <div class=" container-item-links col-lg-2 text-center" >
     <ul class="row ps-0 flex-column py-3 list-container mt-5 justify-content-start">
       <li class="list-items px-2" routerLinkActive="router-link-active" [routerLink]="'about'">
         <p class="text-start ps-1">
           <i class="fa-regular fa-address-card me-1"></i>
           About
-        </p>
+        </p> 
       </li>
       <li class="list-items px-2" routerLinkActive="router-link-active" [routerLink]="'skills'">
         <p class="text-start ps-1">
@@ -35,7 +35,7 @@
 
   </div>
 
-  <div class="container-item col-md-3 mt-2 pb-2 text-center bg-white"
+  <div class="container-item col-lg-3 mt-2 pb-2 text-center bg-white"
     style=" box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important; z-index: 1;">
     <div class="col-lg-12" style="height: 60%;">
       <img src="../../../assets/bg.png" class=" imgLogo mat-elevation-z8 mt-3" alt="">
@@ -78,7 +78,7 @@
     </p>
   </div>
 
-  <div class="mt-2 col-md-7 container-item2 p-0 text-center  ">
+  <div class="mt-2 col-lg-7 container-item2 p-0 text-center  ">
     <router-outlet></router-outlet>
   </div>
 
