--- a/src/app/public/works/works.component.html
+++ b/src/app/public/works/works.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="row px-2" style="margin: 0;">
-        <div class="col-lg-4 mt-4" *ngFor="let card of projects" >
+        <div class="col-sm-4 mt-4" *ngFor="let card of projects" >
             <div *ngIf="card.link" class="pb-3 px-2 mat-elevation-z8 cards" [routerLink]="[card.link]" [style.Color]="card.color">
                 <div class="card-pattern" [style.background-color]="card.color"></div>
                 <img [src]="card.url" style="width: 90px; height: 80px;" alt="" class="mt-4 ms-2 card-img">
