--- a/src/app/public/works/parallax-bg/parallax-bg.component.html
+++ b/src/app/public/works/parallax-bg/parallax-bg.component.html
@@ -15,5 +15,13 @@
             <img style=" bottom: 30px; right: 40px;" class="item-1-bg" src="../../../../assets/parallax/4.webp"
                 data-value="-4" alt="">
         </div>
+        <!-- <div class="parallax-bg-2 bg-danger mt-2" >
+            <img class=" backgr" src="../../../../assets/parallax/bg.png"
+                data-value="3" alt="">
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident debitis, dolore inventore molestiae quia aperiam illo maxime nam, itaque quidem ullam hic accusantium quaerat doloribus, fuga eligendi. Nulla asperiores nostrum eius deserunt autem perspiciatis, illo at ipsa amet sit, quasi recusandae ad accusantium, nesciunt expedita iste! Ratione voluptas accusantium nihil delectus aliquid quos obcaecati dolore sunt perferendis pariatur magnam nisi porro amet rerum, libero soluta neque magni dignissimos dolores eius repellat! Possimus omnis illum blanditiis saepe nemo, voluptatem necessitatibus ratione placeat harum, quod magni nihil dicta nam enim, odit libero. Illo omnis ipsum aspernatur quidem architecto optio expedita. Nemo voluptatibus fugiat repellat commodi possimus. Quos similique, asperiores ullam quibusdam facilis perspiciatis consequuntur ratione sit assumenda quasi, consequatur ab magni eveniet eum maxime delectus. Optio inventore deserunt accusantium aut explicabo maxime, dolores eos reprehenderit vero, numquam recusandae quo, laboriosam quidem veritatis? Soluta vero commodi maxime eum fuga quisquam ipsa, culpa officia veniam debitis ullam odit dolorum fugiat natus quasi quidem libero cumque qui! Sequi itaque quis est pariatur totam esse, obcaecati unde nulla distinctio maiores asperiores suscipit quaerat dolor reiciendis! Nesciunt quia sed totam, voluptates excepturi ipsum saepe deserunt quos consequuntur laudantium sint aspernatur mollitia ipsam eum repellat. Laboriosam veniam magni fuga eveniet sequi perspiciatis fugiat consequatur minima vitae aliquid, eius officia accusantium dignissimos magnam cupiditate facilis illo earum, iste voluptate quod nulla vel ea! Magni atque perspiciatis ipsum ipsam, sint a vel facere! Recusandae numquam natus vero, quas quaerat ex doloribus quo in! Hic dolor necessitatibus repellat quod sed quibusdam! Aliquam quo ex delectus corporis corrupti! Soluta facilis reprehenderit quibusdam minus, architecto, ducimus neque, possimus est porro enim voluptas? Impedit magnam odit quibusdam. Cumque, sit eaque perspiciatis non quidem voluptatibus perferendis molestias ab eligendi consequuntur porro soluta, qui reprehenderit accusantium laudantium enim modi aperiam eius recusandae quasi illum. Iusto, tempora.
+                </p>
+        </div> -->
     </div>
 </div>
